qs before cleaning up custom Repository return values to Optional<>